# Retail-Trading-Algo

./: .env.backtest.example  .env.example  .env.forward.example  .env.train.example  .gitignore  README.md  account_lookup.py  bot_runtime.py  conftest.py  engine_test.py  flatten_all.py  order_cancel.py  order_place.py  orders_open.py  position_close_contract.py  positions_open.py  projectx_api.py  pyproject.toml  realtime_client.py  requirements.txt  setup.py  test_imports.py
account/: account_check.py  account_lookup.py
artifacts/telemetry/: backtest_candidate_matrix.csv  backtest_candidates.csv  (+4 more)
bot/: bot.py  bot_runtime.py
core/: connect_gateway.py  execution_engine.py  realtime_client.py
docs/: architecture.md  roadmap.md
market/: market_lookup.py
orders/: order_cancel.py  order_place.py  orders_open.py
positions/: flatten_all.py  position_close_contract.py  positions_open.py
scripts/: account_check.py  account_lookup.py  bot.py  flatten_all.py  order_cancel.py  orders_open.py  position_close_contract.py  run_bot.py
tests/: engine_test.py  test_backtest.py  test_backtest_orderflow.py  test_bot_runtime_depth.py  test_broker_factory.py  test_config.py  test_databento_orderflow_import.py  test_drawdown_guard.py  test_execution_engine.py  test_imports.py  test_ml_gate.py  test_mode_runner_backtest_candidates.py  test_mode_runner_strategy_config.py  test_ny_session_structure_strategy.py  test_orderflow_filter.py  test_position_management_planners.py  test_projectx_orderflow_export.py  test_projectx_realtime_protocol.py  test_swing_points.py
(+67 files in other folders)
