[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "retail-trading-algo"
version = "0.2.0"
description = "Retail trading algorithm runtime and execution stack"
requires-python = ">=3.11"
dependencies = [
  "python-dotenv",
  "requests",
  "signalrcore",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pyright]
pythonVersion = "3.11"
include = ["src", "tests", "scripts"]
exclude = [".venv", "__pycache__", ".git"]
reportMissingImports = false
reportMissingModuleSource = false
reportPrivateImportUsage = false

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 100
